Another commit post launch

--- a/ecommerce/templates/footer.html
+++ b/ecommerce/templates/footer.html
@@ -31,7 +31,7 @@
                             <p><i class="fa fa-phone  mx-2 "></i> +91 22-27782183</p>
                         </div> -->
                         <div>
-                            <p><i class="fa fa-envelope  mx-2"></i><a href="mailto:support-azalea_books@gmail.com">support-azalea_books@gmail.com</a></p>
+                            <p><i class="fa fa-envelope  mx-2"></i><a href="mailto:support-azalea_books@gmail.com">socialmail.azaleabooks@gmail.com</a></p>
                         </div>  
                     </div>  
                 </div>
