--- a/ecommerce/templates/products/home.html
+++ b/ecommerce/templates/products/home.html
@@ -77,7 +77,11 @@ Buy/ Rent
           <div class="carousel-caption text-left">
             <h1>Read Our Blog</h1>
             <p>Confused? Do not know what to do? Don't bother, we are here for your rescue.<br>Listen from your peers who've been there and now ruling their field.<br> Read our Blog for great insights and intellectual thoughts.</p>
-            <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+            {% if user.is_authenticated %}
+            <p><a class="btn btn-lg btn-primary" href="{% url 'auth_logout' %}" role="button">Sign Out</a></p>
+            {% else %}
+            <p><a class="btn btn-lg btn-primary" href="{% url 'auth_login' %}" role="button">Sign up/Login</a></p>
+            {% endif %}
           </div>
       </div>
     </div>
